# divina

./: .dockerignore  .gitattributes  .gitignore  AUTHORS  ChangeLog  Dockerfile  DockerfileKubernetes  Manifest.in  README  README.md  __init__.py  codecov.yml  dev.Dockerfile  entrypoint.sh  prod.Dockerfile  requirements.txt  script.sh  setup.cfg  setup.py
.github/workflows/: dev.yaml  gha.yaml  prod.yaml  release.yaml  test.yaml
AWS_IAM/: DIVINA_IAM  EXECUTOR_IAM  EXECUTOR_ROLE_TRUST_POLICY  S3_ASSUME_IMPORT_ROLE  S3_ASSUME_SOURCE_ROLE  S3_IMPORT_IAM  S3_SOURCE_IAM  S3_STUDENT_IAM  WORKER_ROLE_TRUST_POLICY
AWS_PYTHON/: partition_data.py  source_import.py  vision_setup.py
AWS_PYTHON/remote_scripts/: partition_data.py  requirements.txt  spark_model.py  test.py
AWS_PYTHON/spark_scripts/: predict.py  spark_model.py  validate.py
WIP/: .travis.yml
aws/: utils.py
cli/: cli.py
config/: data_definition.json  divina_iam_policy.json
divina/: __init__.py  _experiment.py  dataset.py  errors.py  experiment.py  forecast.py  import_data.py  model.py  models.py  predict.py  train.py  utils.py  validate.py  vision.py
divina.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
divina/aws/: aws_backoff.py  utils.py
divina/cli/: __init__.py  cli.py
divina/config/: codeartifact_repo_iam_policy.json  divina_iam_policy.json  ed_schema.json  emr_config.json  emr_config_dask.json  external_dataset_bucket_policy.json  fd_schema.json  import_iam_policy.json  import_trust_policy.json  test_vd_1.json
docs/: .buildinfo  aws.html  cli.html  conf.py  experiments.html  genindex.html  index.html  index.rst  objects.inv  orchestration.html  py-modindex.html  quickstart.html  scale.html  search.html  searchindex.js
docs_src/: airpassengers.ipynb  cli.rst  conf.py  index.rst  orchestration.rst  quickstart.rst
forecast/: dataset.py  import_data.py  predict.py  train.py  validate.py  vision.py
models/: model.py
ops/: build_publish_dev.py
tests/: conftest.py  test_vision_integration.py  test_vision_integration_mock.py  test_vision_unit.py
(+358 files in other folders)
