[metadata]
name=divina
author = Coysu Consulting
author-email = john@coysu.com
summary = Package for causal, scalable forecasting
description-file = README
home-page = www.coysu.com
license = BSD-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: AWS
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[extras]
testing=
    s3fs
    pyspark
    pyarrow
    python-snappy
dataset=
    s3fs
    pyarrow
    python-snappy
[entry_points]
console_scripts =
    divina = cli.cli:divina