[metadata]
name=divina
author = Coysu Consulting
author-email = john@coysu.com
summary = Package for causal, scalable forecasting
description-file = README.md
home-page = https://www.coysu.com
license = BSD-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[entry_points]
console_scripts =
    divina = divina.cli.cli:divina