[metadata]
name = divina
author = Coysu Consulting
author-email = john@coysu.com
long_description = file: README.md
long_description_content_type = text/markdown
summary = Package for causal, scalable forecasting
home-page = https://www.coysu.com
license = BSD-3-Clause
license_file = LICENSE
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/secrettoad/divina/issues
    Documentation = https://secrettoad.github.io/divina/
    Source Code = https://github.com/secrettoad/divina
keywords =
    forecasting